--- a/CSS/claseEspecificidad/style.css
+++ b/CSS/claseEspecificidad/style.css
@@ -3,15 +3,44 @@
   margin: 0;
   padding: 0;
 }
+
 h1 {
   color: purple;
   font-family: serif;
   margin-bottom: 10px;
 }
+
+/* #page-title {
+  font-family: sans-serif;
+}
+
+#main-nav {
+  margin-top: 10px;
+  list-style: none;
+  padding-left: 0;
+}
+
+#main-nav li {
+  display: inline-block;
+}
+
+#main-nav a {
+  color: white;
+  background-color: #13a4a4;
+  padding: 5px;
+  border-radius: 2px;
+  text-decoration: none;
+}
+
+#main-nav .blog {
+  background-color: red;
+} */
+
 .title {
   font-size: 18px;
   font-family: monospace;
 }
+
 .nav {
   margin-top: 10px;
   list-style-type: none;
